--- a/Program/Program.csproj
+++ b/Program/Program.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\Animals\Animals.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Library" Version="1.0.0" />
+      <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+      <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.1" />
+      <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
+    </ItemGroup>
+
 </Project>
